- update net/asterisk to 1.8.21.0 - update net/asterisk11 to 11.3.0 - add -F to command_args in the rc script, this ensures that asterisk   detaches from the controlling terminal. It was possible for the asterisk   rc script to prevent a box from reaching full multiuser if e.g. -v was   passed to command_args. [1]
Reported by:	Kurt Lidl <lidl@pix.net>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316277 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/asterisk/files/asterisk.in
+++ b/net/asterisk/files/asterisk.in
@@ -23,7 +23,7 @@ stop_cmd="asterisk_stop"
 reload_cmd="asterisk_reload"
 
 command="%%PREFIX%%/sbin/asterisk"
-command_args="-n -U %%ASTERISK_USER%%"
+command_args="-n -F -U %%ASTERISK_USER%%"
 pidfile=${asterisk_pidfile:-"/var/run/asterisk/asterisk.pid"}
 
 asterisk_stop() {
