Add py-gobject 3.8.0.
This is the next version of the python GLib/GObject/GIO bindings, including
full GObject introspection support.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316278 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3495,6 +3495,7 @@
     SUBDIR += py-gitosis
     SUBDIR += py-gitpython
     SUBDIR += py-gobject
+    SUBDIR += py-gobject3
     SUBDIR += py-greenlet
     SUBDIR += py-grizzled
     SUBDIR += py-grouch
