--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4200,6 +4200,7 @@
     SUBDIR += sdts++
     SUBDIR += sedsed
     SUBDIR += seed
+    SUBDIR += seed3
     SUBDIR += semantic
     SUBDIR += serdisplib
     SUBDIR += sfio
