Fix port. Apparently I committed a older version.
Submitted by:	Freshport sanity check


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316280 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/seed3/Makefile
+++ b/devel/seed3/Makefile
@@ -61,4 +61,4 @@ pre-build:
 post-build:
 	${CP} ${WRKSRC}/extensions/Seed.js.sav ${WRKSRC}/extensions/Seed.js
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
