Convert my ports to use the new USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316284 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/libass/Makefile
+++ b/multimedia/libass/Makefile
@@ -16,8 +16,7 @@ LIB_DEPENDS=	freetype:${PORTSDIR}/print/freetype2 \
 		expat:${PORTSDIR}/textproc/expat2 \
 		fribidi:${PORTSDIR}/converters/fribidi
 
-USES=	pathfix
-USE_PKGCONFIG=	build
+USES=	pathfix pkgconfig
 USE_XZ=	yes
 USE_LDCONFIG=	yes
 
