--- a/audio/gogglesmm/Makefile
+++ b/audio/gogglesmm/Makefile
@@ -28,8 +28,9 @@ GCRYPT_DESC=	Use libgcrypt for md5 calculation
 HAS_CONFIGURE=	yes
 CONFIGURE_ARGS+=	--mandir=${PREFIX}/man --prefix=${PREFIX}
 MAKE_JOBS_SAFE=	yes
+
+USES=		pkgconfig
 USE_GMAKE=	yes
-USE_PKGCONFIG=	yes
 USE_XZ=		yes
 INSTALLS_ICONS=	yes
 MAN1=		gogglesmm.1
