--- a/x11-wm/i3/Makefile
+++ b/x11-wm/i3/Makefile
@@ -31,11 +31,10 @@ RUN_DEPENDS=	p5-IPC-Run>=0:${PORTSDIR}/devel/p5-IPC-Run \
 
 USE_PERL5_RUN=	yes
 USE_XORG=	x11 xcursor
-USES=		bison
+USES=		bison pkgconfig
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_ICONV=	yes
-USE_PKGCONFIG=	build
 MAKE_JOBS_UNSAFE=	yes
 
 PLIST_FILES=	bin/i3 \
