--- a/sysutils/x86info/Makefile
+++ b/sysutils/x86info/Makefile
@@ -19,7 +19,7 @@ ONLY_FOR_ARCHS=	i386 amd64
 USE_GCC=	any
 USE_GMAKE=	yes
 ALL_TARGET=	x86info lsmsr
-USE_PKGCONFIG=	build
+USES=	pkgconfig
 USE_PYTHON_BUILD=yes
 MAKE_JOBS_SAFE=	yes
 
