Convert some multimedia@ ports to: USES=pkgconfig and USES=pathfix
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316286 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/mjpegtools/Makefile
+++ b/multimedia/mjpegtools/Makefile
@@ -18,7 +18,7 @@ QUICKTIME_DESC=		Enable libQuickTime support
 
 CONFLICTS=	mplex-[0-9]*
 
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_AUTOTOOLS=	libtoolize aclocal autoheader automake autoconf
 LIBTOOLIZE_ARGS=--force
