Convert USE_PKGCONFIG -> USES=pkgconf for audio category
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316287 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/arts/Makefile
+++ b/audio/arts/Makefile
@@ -35,6 +35,7 @@ EXPIRATION_DATE=	2013-07-01
 
 PREFIX=		${KDE_PREFIX}
 WANT_GNOME=	yes
+USES=		pkgconfig
 USE_QT_VER=	3
 USE_BZIP2=	yes
 USE_AUTOTOOLS=	libtool
@@ -44,7 +45,6 @@ USE_ICONV=	yes
 USE_XORG=	ice sm x11 xau xcursor xdmcp xext xfixes xft xi \
 		xinerama xrandr xrender xt
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
 QTCPPFLAGS+=	-L${LOCALBASE}/lib
 DO_NOT_COMPILE+=gmcop
 _NO_KDE_FINAL=	yes
