--- a/audio/gvolwheel/Makefile
+++ b/audio/gvolwheel/Makefile
@@ -15,10 +15,10 @@ BUILD_DEPENDS=	intltoolize:${PORTSDIR}/textproc/intltool
 
 CONFIGURE_ARGS+=--enable-oss
 GNU_CONFIGURE=	yes
+USEs=		pkgconfig pathfix
 USE_GMAKE=	yes
-USE_GNOME=	gnomehack gtk30
+USE_GNOME=	gtk30
 USE_ICONV=	yes
-USE_PKGCONFIG=	yes
 
 OPTIONS_DEFINE=	NLS
 NLS_DESC=	Native language support
