--- a/audio/ices/Makefile
+++ b/audio/ices/Makefile
@@ -21,13 +21,13 @@ LIB_DEPENDS=	ogg:${PORTSDIR}/audio/libogg \
 
 OPTIONS_DEFINE=	ALSA
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GNOME=	libxml2
 USE_GMAKE=	yes
 USE_ICONV=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-roaraudio --disable-sun-audio
-USE_PKGCONFIG=	build
 MAKE_JOBS_SAFE=	yes
 
 CPPFLAGS+=	-I${LOCALBASE}/include ${PTHREAD_CFLAGS}
