--- a/audio/portaudio2/Makefile
+++ b/audio/portaudio2/Makefile
@@ -23,9 +23,9 @@ CONFIGURE_ARGS+=PKG_CONFIG_LIBDIR=${PREFIX}/libdata/pkgconfig \
 			--libdir=${PREFIX}/lib/${PORTNAME}2 \
 			--includedir=${PREFIX}/include/${PORTNAME}2
 
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_DOS2UNIX=	yes
-USE_PKGCONFIG=	build
 USE_LDCONFIG=	${PREFIX}/lib/${PORTNAME}2
 
 CPPFLAGS+=	-I${LOCALBASE}/include ${PTHREAD_CFLAGS}
