--- a/audio/q-audio/Makefile
+++ b/audio/q-audio/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	q-audio
-# Date created:		14 August 2003
-# Whom:			ag@muwiinfa.geschichte.uni-mainz.de Albert Graef
-#
+# Created by: ag@muwiinfa.geschichte.uni-mainz.de Albert Graef
 # $FreeBSD$
-#
 
 PORTNAME=	audio
 PORTVERSION=	2.7
@@ -23,7 +19,7 @@ LIB_DEPENDS=	q.8:${PORTSDIR}/lang/q \
 BUILD_DEPENDS=	${LOCALBASE}/lib/portaudio2/libportaudio.so.2:${PORTSDIR}/audio/portaudio2
 RUN_DEPENDS:=	${BUILD_DEPENDS}
 
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 
 DATADIR=	${PREFIX}/share/q
 
