--- a/audio/sox/Makefile
+++ b/audio/sox/Makefile
@@ -20,9 +20,9 @@ MAN3=		libsox.3
 MAN7=		soxformat.7
 MLINKS=		sox.1 play.1 sox.1 rec.1 sox.1 soxeffect.7
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_LDCONFIG=	yes
 USE_AUTOTOOLS=	libltdl
-USE_PKGCONFIG=	build
 
 OPTIONS_DEFINE=	ALSA AO AMRNB AMRWB FFMPEG FLAC GSM ID3TAG LADSPA LAME \
 		MAD PNG SNDFILE VORBIS WAVPACK
