--- a/audio/thunar-media-tags-plugin/Makefile
+++ b/audio/thunar-media-tags-plugin/Makefile
@@ -1,6 +1,5 @@
 # Created by: Martin Wilke (miwi@FreeBSD.org)
 # $FreeBSD$
-#
 
 PORTNAME=	thunar-media-tags-plugin
 PORTVERSION=	0.2.0
@@ -15,6 +14,7 @@ COMMENT=	A Media Tags Plugin
 
 LIB_DEPENDS=	tag:${PORTSDIR}/audio/taglib
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_GETTEXT=	yes
@@ -22,6 +22,5 @@ GNU_CONFIGURE=	yes
 USE_GNOME=	gnomehack gtk20 intltool intlhack
 USE_XFCE=	configenv libexo thunar
 USE_AUTOTOOLS=	libtool
-USE_PKGCONFIG=	build
 
 .include <bsd.port.mk>
