--- a/audio/tuxguitar/Makefile
+++ b/audio/tuxguitar/Makefile
@@ -26,12 +26,12 @@ LIB_DEPENDS=	fluidsynth.1:${PORTSDIR}/audio/fluidsynth \
 MAKE_ENV+=	PREFIX=${PREFIX} INSTALL_DOC_DIR=${DOCSDIR} \
 		INSTALL_SHARE_DIR=${DATADIR}
 
+USES=		pkgconfig
 USE_JAVA=	yes
 USE_ANT=	yes
 USE_GECKO=	libxul19
 USE_GMAKE=	yes
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
 JAVA_VERSION=	1.6+
 NOCCACHE=	yes
 
