--- a/audio/vagalume/Makefile
+++ b/audio/vagalume/Makefile
@@ -16,9 +16,9 @@ LIB_DEPENDS=	xml2:${PORTSDIR}/textproc/libxml2 \
 		curl.6:${PORTSDIR}/ftp/curl
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_GNOME=	gtk20
-USE_PKGCONFIG=	build
 USE_GSTREAMER=	good mad gconf
 INSTALLS_ICONS=	yes
 
