--- a/audio/abraca/Makefile
+++ b/audio/abraca/Makefile
@@ -13,9 +13,9 @@ BUILD_DEPENDS=	${LOCALBASE}/bin/valac:${PORTSDIR}/lang/vala
 LIB_DEPENDS=	xmmsclient:${PORTSDIR}/audio/xmms2 \
 		gee:${PORTSDIR}/devel/libgee06
 
+USES=		pkgconfig
 USE_SCONS=	yes
 USE_GNOME=	gtk30
-USE_PKGCONFIG=	build
 
 SCONS_ARGS=	MANDIR=${MANPREFIX}/man
 
