--- a/audio/cmus/Makefile
+++ b/audio/cmus/Makefile
@@ -10,11 +10,11 @@ DISTNAME=	${PORTNAME}-v${PORTVERSION}
 MAINTAINER=	h.skuhra@gmail.com
 COMMENT=	Console-based music player with really cool features
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_ICONV=	yes
 USE_NCURSES=	yes
-USE_PKGCONFIG=	build
 HAS_CONFIGURE=	yes
 CONFIGURE_ENV+=	HOSTCC=${CC}
 CONFIGURE_ARGS+=prefix=${PREFIX} mandir=${MANPREFIX}/man \
