--- a/audio/libsmf/Makefile
+++ b/audio/libsmf/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	libsmf
-# Date created:		2010-03-29
-# Whom:			Edward Tomasz Napierala <trasz@FreeBSD.org>
-#
+# Created by: Edward Tomasz Napierala <trasz@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	libsmf
 PORTVERSION=	1.3
@@ -15,8 +11,8 @@ COMMENT=	Standard MIDI File format library
 
 LIB_DEPENDS+=	readline.6:${PORTSDIR}/devel/readline
 
-USE_GNOME=	glib20 gnomehack
-USE_PKGCONFIG=	build
+USES=	pathfix pkgconfig
+USE_GNOME=	glib20
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 MAN1=		smfsh.1
