--- a/audio/linnya/Makefile
+++ b/audio/linnya/Makefile
@@ -15,10 +15,10 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	herenvarno
 GH_COMMIT=	90cf6b8
 
+USES=		pkgconfig
 USE_AUTOTOOLS=	libtoolize libtool
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
-USE_PKGCONFIG=	build
 USE_GNOME=	gtk30
 USE_SQLITE=	3
 USE_GSTREAMER=	good mp3
