--- a/audio/milkytracker/Makefile
+++ b/audio/milkytracker/Makefile
@@ -18,10 +18,10 @@ NOT_FOR_ARCH=	powerpc
 LIB_DEPENDS+=	jack:${PORTSDIR}/audio/jack \
 		zzip:${PORTSDIR}/devel/zziplib
 
+USES=		pkgconfig
 GNU_CONFIGURE=	yes
 USE_SDL=	sdl
 MAKE_JOBS_SAFE=	yes
-USE_PKGCONFIG=	build
 
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
