--- a/audio/raul/Makefile
+++ b/audio/raul/Makefile
@@ -15,9 +15,9 @@ LICENSE_COMB=	dual
 
 LIB_DEPENDS=	boost_date_time:${PORTSDIR}/devel/boost-libs
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_GNOME=	glib20
-USE_PKGCONFIG=	build
 USE_PYTHON_BUILD=yes
 USE_LDCONFIG=	yes
 
