--- a/audio/smasher/Makefile
+++ b/audio/smasher/Makefile
@@ -16,8 +16,8 @@ LIB_DEPENDS=	sndfile.1:${PORTSDIR}/audio/libsndfile \
 		csound64.5:${PORTSDIR}/audio/csound
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
-USE_PKGCONFIG=	build
 USE_WX=		yes
 WX_CONF_ARGS=	absolute
 
