--- a/devel/allegro/Makefile
+++ b/devel/allegro/Makefile
@@ -10,6 +10,8 @@ MASTER_SITES=	SF/alleg/${PORTNAME}/${PORTVERSION}
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A cross-platform library for games and multimedia programming
 
+BROKEN=		fails to build
+
 USE_AUTOTOOLS=	autoconf
 USE_GCC=	any
 USE_GMAKE=	yes
