- Broken fails to build
n file included from main.cpp:52:
/usr/include/sys/timeb.h:42:2: warning: #warning "this file includes <sys/timeb.h> which is deprecated"
c++ -O2 -pipe -fno-strict-aliasing -c UnAlz.cpp
UnAlz.cpp: In member function 'UINT32 UNALZ::CUnAlz::CRC32(UINT32, BYTE)':
UnAlz.cpp:1910: error: invalid conversion from 'const z_crc_t*' to 'const long unsigned int*'
*** [UnAlz.o] Error code 1


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316292 35697150-7ecd-e111-bb59-0022644237b5

--- a/archivers/unalz/Makefile
+++ b/archivers/unalz/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	unalz
-# Date created:		23 October 2004
-# Whom:			Hye-Shik Chang
-#
+# Created by: Hye-Shik Chang
 # $FreeBSD$
-#
 
 PORTNAME=	unalz
 PORTVERSION=	0.65
@@ -17,6 +13,7 @@ COMMENT=	Extracts AlZip archives
 
 LICENSE_FILE=	${WRKSRC}/readme.txt
 
+BROKEN=		fails to build
 USE_ICONV=	yes
 PLIST_FILES=	bin/unalz
 MAKEFILE=	Makefile.freebsd
