Simplify port logic
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316295 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/csmith/Makefile
+++ b/devel/csmith/Makefile
@@ -20,8 +20,6 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 
 MAKE_JOBS_SAFE=	yes
 
-.include <bsd.port.pre.mk>
-
 ONLY_FOR_ARCHS=	i386 amd64
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
