- Update to 2.8.14 and adjust CONFLICTS - Add LICENSE information - Canonicalize 'Created by:' Makefile header - Remove shlib version from LIB_DEPENDS assignment - Correct LDAP_SASL logic - Replace tab with a single space after 'WWW:' in pkg-descr
PR:		ports/177127
Submitted by:	Yasuhiro KIMURA <yasu@utahime.org>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316300 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/postfix28/Makefile
+++ b/mail/postfix28/Makefile
@@ -1,8 +1,8 @@
-# Created by: torstenb
+# Created by: Torsten Blum <torstenb@FreeBSD.org>
 # $FreeBSD$
 
 PORTNAME=	postfix
-PORTVERSION=	2.8.13
+PORTVERSION=	2.8.14
 PORTEPOCH=	1
 CATEGORIES=	mail ipv6
 MASTER_SITES=	ftp://ftp.porcupine.org/mirrors/postfix-release/official/ \
@@ -16,10 +16,16 @@ DIST_SUBDIR=	${PORTNAME}
 MAINTAINER=	sahil@FreeBSD.org
 COMMENT=	Secure alternative to widely-used Sendmail
 
+LICENSE=	IPL10
+LICENSE_NAME=	IBM PUBLIC LICENSE VERSION 1.0
+LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
+
 VDAVERSION=	2.8.13
 CONFLICTS=	courier-0.* postfix-1.* postfix-2.[0-79].* postfix-base-2.[0-79].* \
-		postfix-current-2.* postfix-current-base-2.* sendmail-8.* \
-		sendmail+*-8.* smail-3.* zmailer-2.* opensmtpd-[0-9]*
+		postfix-2.10.* postfix-base-2.10.* postfix-current-2.* \
+		postfix-current-base-2.* sendmail-8.* sendmail+*-8.* \
+		smail-3.* zmailer-2.* opensmtpd-[0-9]*
 
 NO_LATEST_LINK=	yes
 
@@ -148,7 +154,7 @@ POSTFIX_AUXLIBS+=	-lkrb5 ${KRB5_EXTR} -lcrypto -lcrypt -lcom_err -lasn1 -lroken
 .endif
 
 .if ${PORT_OPTIONS:MSASLKMIT}
-LIB_DEPENDS+=		krb5.3:${PORTSDIR}/security/krb5
+LIB_DEPENDS+=		krb5:${PORTSDIR}/security/krb5
 POSTFIX_AUXLIBS+=	-Wl,--rpath,$${KRB5_HOME:-${LOCALBASE}}/lib -lkrb5 -lcrypto -lcrypt -lcom_err
 .endif
 
@@ -159,7 +165,7 @@ POSTFIX_AUXLIBS+=	-L${OPENSSLLIB} ${LDFLAGS} -lssl -lcrypto
 .endif
 
 .if ${PORT_OPTIONS:MSPF}
-LIB_DEPENDS+=		spf2.3:${PORTSDIR}/mail/libspf2
+LIB_DEPENDS+=		spf2:${PORTSDIR}/mail/libspf2
 PATCH_SITES+=		${MASTER_SITE_LOCAL}
 PATCH_SITE_SUBDIR=	mm
 PATCHFILES+=		postfix-2.8.0-libspf2-1.2.x-0.patch.gz
@@ -207,11 +213,9 @@ POSTFIX_AUXLIBS+=	-L${LOCALBASE}/lib -lldap -llber
 _REQUIRE+=		slapd
 .if ${PORT_OPTIONS:MLDAP_SASL}
 .if ! ${PORT_OPTIONS:MSASL2}
-PORT_OPTIONS+=SASL2
+LIB_DEPENDS+=		sasl2:${PORTSDIR}/security/cyrus-sasl2
 .endif
-.if ${PORT_OPTIONS:MLSASL2}
-POSTFIX_CCARGS+=	-DUSE_LDAP_SASL
-.endif
+POSTFIX_CCARGS+=	-I${LOCALBASE}/include/sasl -DUSE_LDAP_SASL
 .endif
 .endif
 
