--- a/japanese/fcitx-mozc/Makefile
+++ b/japanese/fcitx-mozc/Makefile
@@ -13,6 +13,8 @@ DATADIR=	${PREFIX}/share/fcitx/${PORTNAME}
 MASTERDIR=	${.CURDIR}/../../japanese/mozc-server
 PKGMESSAGE=	${.CURDIR}/pkg-message
 
+BROKEN=		fails to build
+
 BUILD_MOZC_LIST=	fcitx_mozc
 
 post-install:
