Convert all a categories to USE=pkgconfig While here trim some headers and convert some gnomehack to pathfix
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316309 35697150-7ecd-e111-bb59-0022644237b5

--- a/accessibility/at-spi2-atk/Makefile
+++ b/accessibility/at-spi2-atk/Makefile
@@ -19,10 +19,10 @@ RUN_DEPENDS=	at-spi2-core>=2.1.4:${PORTSDIR}/accessibility/at-spi2-core
 
 PORTSCOUT=	limitw:1,even
 
+USES=		pkgconfig pathfix
 USE_XZ=		yes
 USE_GMAKE=	yes
-USE_GNOME=	gnomehack gnomehier intlhack glib20 atk
-USE_PKGCONFIG=	build
+USE_GNOME=	gnomehier intlhack glib20 atk
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
 CPPFLAGS+=	-I${LOCALBASE}/include
