--- a/accessibility/atkmm/Makefile
+++ b/accessibility/atkmm/Makefile
@@ -10,12 +10,12 @@ MASTER_SITES=	GNOME
 MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	C++ wrapper for ATK API library
 
+USES=		pathfix pkgconfig
 USE_XZ=		yes
 USE_LDCONFIG=	yes
 USE_GMAKE=	yes
 MAKE_JOBS_SAFE=	yes
-USE_GNOME=	gnomehack atk glibmm
-USE_PKGCONFIG=	build
+USE_GNOME=	atk glibmm
 GNU_CONFIGURE=	yes
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
