--- a/accessibility/at-spi2-core/Makefile
+++ b/accessibility/at-spi2-core/Makefile
@@ -18,11 +18,11 @@ LIB_DEPENDS=	dbus-1:${PORTSDIR}/devel/dbus
 
 PORTSCOUT=	limitw:1,even
 
+USES=		pathfix pkgconfig
 USE_XZ=		yes
 USE_GETTEXT=	yes
 USE_GMAKE=	yes
-USE_GNOME=	gnomehack gnomehier glib20 intlhack
-USE_PKGCONFIG=	build
+USE_GNOME=	gnomehier glib20 intlhack
 USE_XORG=	x11 xi xtst xext
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
