--- a/astro/cfitsio/Makefile
+++ b/astro/cfitsio/Makefile
@@ -25,8 +25,8 @@ CONFIGURE_ARGS=	ac_cv_prog_FC="f2c"
 GNU_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	yes
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
-WRKSRC=		${WRKDIR}/${PORTNAME}
+USES=		pkgconfig
+RKSRC=		${WRKDIR}/${PORTNAME}
 
 PORTDOCS=	*
 
