--- a/astro/gpsd/Makefile
+++ b/astro/gpsd/Makefile
@@ -13,8 +13,7 @@ COMMENT=	Daemon that monitors one or more GPSes attached to a host computer
 BUILD_DEPENDS=	docbook-xsl>=0:${PORTSDIR}/textproc/docbook-xsl \
 		xsltproc:${PORTSDIR}/textproc/libxslt
 
-USES=		pathfix
-USE_PKGCONFIG=	build
+USES=		pathfix pkgconfig
 USE_SCONS=	yes
 USE_RC_SUBR=	gpsd
 USE_PYTHON=	yes
