Convert all c categories to USE=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316310 35697150-7ecd-e111-bb59-0022644237b5

--- a/cad/adms/Makefile
+++ b/cad/adms/Makefile
@@ -1,10 +1,5 @@
-# New ports collection makefile for:	adms
-# Date created:		2006-07-29
-# Whom:			Stanislav Sedov <ssedov@mbsd.msk.ru>
-#
-# $MBSDlabs$
+# Created by: Stanislav Sedov <ssedov@mbsd.msk.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	adms
 PORTVERSION=	2.3.0
@@ -18,10 +13,10 @@ COMMENT=	A model generator for SPICE simulators
 LICENSE=	LGPL21
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+USES=		pkgconfig
 USE_GNOME=	glib20
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
-USE_PKGCONFIG=	yes
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
 
