--- a/converters/wkhtmltopdf/Makefile
+++ b/converters/wkhtmltopdf/Makefile
@@ -20,11 +20,11 @@ WRKSRC=		${WRKDIR}/${PORTNAME}-qt
 INSTALL_WRKSRC=	${WRKDIR}/${PORTNAME}-${DISTVERSION}
 
 WKQTVERSION=		6053b687
+USES=			pkgconfig
 USE_XORG=		x11 xext xrender
 USE_PERL5_BUILD=	yes
 USE_LDCONFIG=		yes
 USE_GMAKE=		yes
-USE_PKGCONFIG=		build
 HAS_CONFIGURE=		yes
 MAKE_JOBS_SAFE=		yes
 
