- convert to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316311 35697150-7ecd-e111-bb59-0022644237b5

--- a/deskutils/xpad/Makefile
+++ b/deskutils/xpad/Makefile
@@ -21,7 +21,7 @@ USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_XORG=	x11 sm
 USE_GNOME=	gtk20 gnomehier intltool
-USE_PKGCONFIG=	build
+USES=	pkgconfig
 INSTALLS_ICONS=	yes
 GNU_CONFIGURE=	yes
 
