--- a/deskutils/xpad-current/Makefile
+++ b/deskutils/xpad-current/Makefile
@@ -20,7 +20,7 @@ FETCH_ARGS=	-p
 USE_BZIP2=	yes
 USE_XORG=	x11 sm
 USE_GNOME=	gtk20 gnomehier intltool
-USE_PKGCONFIG=	build
+USES=	pkgconfig
 INSTALLS_ICONS=	yes
 CPPFLAGS+=	${CXXFLAGS} -I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
